mule-user-guide/v/3.4/jaas-module-reference.adoc
Jaas Security。= 

`JaasSimpleAuthenticationProvider`是一个安全提供者，提供了一种与Jaas验证服务进行交互的方式。

Jaas的安全提供商可以通过几种不同的方式进行配置。它允许您通过向提供者传递Jaas配置文件或通过将所需属性直接传递给`JaasSimpleAuthenticationProvider`来配置Jaas。下面介绍这两种配置方法。

== 使用Jaas配置文件

通常，JAAS身份验证是以可插拔的方式执行的，因此应用程序可以独立于底层的身份验证技术。

[source, code, linenums]
----
jaasTest{
   org.mule.module.jaas.loginmodule.DefaultLoginModule required
   credentials="anon:anon;Marie.Rizzo:dragon;"
};
----

上述示例保存在名为`jaas.conf`的文件中。该文件只包含一个名为`com.ss.jaasTest`的条目，这是我们想要保护的应用程序的位置。该条目指定验证用户的登录模块。作为登录模块，您可以使用Mule的`DefaultLoginModule`，这是Java附带的登录模块之一，也可以创建自己的。在这种情况下，我们选择了Mule的`DefaultLoginModule`。

登录模块后面的`required`标志指定登录模块必须成功认证才能成功。其他标志是：

*Required*  - 登录模块需要成功。如果成功或失败，身份验证仍将继续沿着登录模块列表进行。

*Requisite*  - 登录模块需要成功。如果成功，则认证继续沿着登录模块列表。如果失败，控制立即返回到应用程序。

*Sufficient*  - 登录模块不需要成功。如果成功，控制立即返回到应用程序（认证不会沿着登录模块列表进行）。如果失败，则认证继续沿着登录模块列表。

*Optional*  - 登录模块不需要成功。如果成功或失败，身份验证仍将继续沿着登录模块列表进行。

该条目还指定了凭证，我们在其中将一串授权用户与他们的密码一起放入。仅当将使用`DefaultLoginModule`时，凭据才会放在此处，因为获取用户名和密码的方法可能因登录模块而异。

如果要使用`DefaultLoginModule`，则凭证字符串的格式必须符合以下格式：

<username>：<password>;

=== 在Mule配置文件中配置提供程序

[source, xml, linenums]
----
<mule xmlns="http://www.mulesource.org/schema/mule/core/2.2"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:jaas="http://www.mulesource.org/schema/mule/jaas/2.2"
       ...cut...
 
    <jaas:security-manager>
        <jaas:security-provider name="jaasSecurityProvider" loginContextName="jaasTest" loginConfig="jaas.conf"/>
    </jaas:security-manager>
----

请注意，在上面，`loginContextName`包含与Jaas配置文件中相同的条目名称。 Mule使用该名称创建登录上下文以查找`jaas.conf`文件的完整URL。

== 直接将证书传递给提供者

配置`JaasSimpleAuthenticationProvider`的第二个选项是将配置细节直接传递给提供程序，否则这些配置细节可能会在Jaas配置文件中找到。

[source, xml, linenums]
----
<jaas:security-manager>
    <jaas:security-provider name="jaasSecurityProvider" loginContextName="jaasTest" credentials="anon:anon;Marie.Rizzo:dragon;"/>
</jaas:security-manager>
----

在上面的配置中，请注意我们删除了属性`loginConfig`，并且不需要传递任何Jaas配置文件。相反，我们只需将凭据传递给提供者（使用与上面指定的格式相同的格式）。由于没有指定登录模块，因此使用`DefaultLoginModule`。

== 传递非默认登录模块

第三个选项是输入你自己的登录模块。

[source, xml, linenums]
----
<jaas:security-manager>
    <jaas:security-provider name="jaasSecurityProvider" loginContextName="jaasTest" loginModule="com.sun.security.auth.module.NTLoginModule"/>
</jaas:security-manager>
----

在上述配置中，我们添加了`loginModule`属性，该属性允许您指定要用于验证用户的登录模块。由于`NTLoginModule`不要求您输入已接受的用户名和密码列表，因此`credentials`的属性已被删除。

== 在端点上配置安全筛选器

您可以使用`JaasSecurityFilter`作为安全筛选器，如下所示：

[source, xml, linenums]
----
<inbound>
    <inbound-endpoint address="vm://test">
        <jaas:jaas-security-filter/>
    </inbound-endpoint>
</inbound>
----

==  JAAS模块参考

该模块通过JAAS提供安全性。

xslt：意外的程序错误：java.lang.NullPointerException


=  JAAS模块

== 安全经理

这是用于配置JAAS相关功能的安全提供程序类型。

<security-manager...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|===

<security-manager...>的{​​{0}}子元素

[%header%autowidth.spread]
|===
| {名称{1}}基数 |说明
| security-provider  | 0..1  |这是用于配置JAAS相关功能的安全提供程序类型。
|密码的加密策略 | 0 .. *  |
|===
== 安全提供商

这是用于配置JAAS相关功能的安全提供程序类型。

<security-provider...>的{​​{0}}属性

[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
| {loginContextName {1}} {串{2}}是 |  |
| {凭证{1}}串 | {无{3}} |
| {loginConfig {1}}串 | {无{3}} |
| {的LoginModule {1}}串 | {无{3}} |
|===

<security-provider...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

==  Jaas安全过滤器

通过JAAS验证用户身份。

<jaas-security-filter...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===
